--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,7 @@
 <h2>I AMA Homepage</h2>
+<ul>
+  <% @links.each do |link| %>
+      <li><a href="<%= link.url %>"><%= link.title %></a></li>
+  <% end %>
+</ul>
 <%= link_to "Add a link", new_link_path %>
