--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,8 @@
 <h2>I AMA Homepage</h2>
 <ul>
   <% @links.each do |link| %>
-    <li><a href="<%= link.url %>"><%= link.title %></a> <%= link_to "Comments", link_path(:id => link.id) %></li>
+    <li><a href="<%= link.url %>"><%= link.title %></a></li>
+    <%= link_to "Comments", link_path(:id => link.id) %>
   <% end %>
 </ul>
 <%= link_to "Add a link", new_link_path %>
