--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,6 +3,9 @@
   <% @links.each do |link| %>
     <li><a href="<%= link.url %>"><%= link.title %></a></li>
     <%= link_to "Comments", link_path(:id => link.id) %>
+    <%= link_to "+", votes_path(:vote => {:link_id => link.id, :up => true}), :method => :post %>
+    <%= link_to "-", votes_path(:vote => {:link_id => link.id, :up => false}), :method => :post %>
+    Votes: <%= link.votes.where(:up => true).count - link.votes.where(:up => false).count %>
   <% end %>
 </ul>
 <%= link_to "Add a link", new_link_path %>
