Before test and new checks for voting

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,12 +5,12 @@
     <%= link_to "Comments", link_path(:id => link.id) %>
     <% if current_user && current_user.votes.where(:link_id => link.id, :up => true).present? %>
       *
-    <% else %>
+    <% elsif current_user %>
       <%= link_to "+", votes_path(:vote => {:link_id => link.id, :up => true}), :method => :post %>
     <% end %>
     <% if current_user && current_user.votes.where(:link_id => link.id, :up => false).present? %>
       *
-    <% else %>
+    <% elsif current_user %>
       <%= link_to "-", votes_path(:vote => {:link_id => link.id, :up => false}), :method => :post %>
     <% end %>
   Votes: <%= link.votes.where(:up => true).count - link.votes.where(:up => false).count %>
